# build-info-go

./: .gitignore  CNAME  POETRY_INTEGRATION_SUMMARY.md  README.md  RELEASE.md  build-info.json  buildinfo-schema.json  buildinfoschema_test.go  go.mod  go.sum  main.go  pipelines.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: analysis.yml  cla.yml  test.yml  (+4 more)
.jfrog/: jfrog-apps-config.yml
.jfrog-pipelines/: pipelines.yml
buildscripts/: build.bat  build.sh
cli/: cli.go  cli_test.go
commands/: commands.go
docs/: CNAME
entities/: buildinfo.go  buildinfo_test.go
flexpack/: cargo_flexpack.go  conan_flexpack.go  conan_flexpack_test.go  flexpack.go  gradle_flexpack.go  helm_flexpack.go  init-artifact-extractor.gradle  maven_buildinfo_integration_test.go  maven_flexpack.go  maven_flexpack_test.go  poetry_buildinfo_integration_test.go  poetry_flexpack.go  poetry_flexpack_test.go  ruby_flexpack.go  rubygems_flexpack.go  uv_flexpack.go
flexpack-upload/: flexpack_upload.go  poetry_upload.go
integrationtests/: npm_test.go  test2.json
release/: build.sh  pipelines.yml
tests/: golang_test.go  main_test.go  maven_test.go  npm_test.go  test_helpers.go  utils.go
utils/: buildutils.go  checksum.go  checksum_test.go  command.go  compare.go  compare_test.go  dependenciesutils.go  error.go  fileutils.go  fileutils_test.go  goutils.go  goutils_test.go  ioutils.go  logger.go  masking.go  npmutils.go  npmutils_test.go  stringset.go  testutils.go  utils.go
utils/testdata/pip/pyproject/: pyproject.toml
(+109 files in other folders)
