[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pip-project-with-pyproject"
version = "1.2.3"
description = "Project example for building Python project with JFrog products"
authors = [
    { name="JFrog", email="jfrog@jfrog.com" }
]
dependencies = [
    "PyYAML>3.11",
    "nltk"
]